Fixed z-index issue

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
   top: 100px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 9;
+  z-index: 10;
   display: flex;
   margin: -20px auto 40px auto;
   gap: 2rem;
@@ -62,6 +62,7 @@ body {
 
 .nav-menu a {
   color: #c4c1c1;
+  display: inline-block;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease;
@@ -73,7 +74,7 @@ body {
 
 .hero-content {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   text-align: center;
   max-width: 800px;
   margin: auto;
@@ -118,7 +119,7 @@ body {
 }
 
 .email-form button {
-  background: #e50914;
+  background: #d70914;
   color: #fff;
   width: 200px;
   font-size: 1.5rem;
